--- a/youtube/style.css
+++ b/youtube/style.css
@@ -80,7 +80,7 @@ header .icons .fa-search {
 /* Video info */
 .infoAndUpNext .info {
   padding: var(--spacing);
-  flex: 2; /* flex: 1 1 0 */
+  flex: 2;
   /* overflow: auto; */
 }
 
@@ -113,7 +113,7 @@ header .icons .fa-search {
 
 .info .metadata .titleAndButton .moreBtn {
   height: 100%;
-  transition: transform 300ms ease-in-out;
+  transition: transform 100ms ease-in-out;
 }
 
 .info .metadata .titleAndButton .moreBtn.clicked {
